add profile details

--- a/profile.html
+++ b/profile.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Aye Nyein San</h1><br>
+    <p>StudentID : 652115502 <br>
+
+        Year : 2<br></p>
 
        <a href="index.html"> add the index link.</a>
 
