--- a/gloria.html
+++ b/gloria.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    <title>Document</title>
 </head>
 <body>
-    <a href="./gloria.html">Gloria</a>
-    <img src="./img.jpg" alt="gloria&rubi">
+    <h2>Gloria Win Nyunt</h2>
 </body>
 </html>
