--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>index</title>
 </head>
 <body>
-    <a href="./gloria.html">Gloria</a>
-    <img src="./img.jpg" alt="gloria&rubi">
+    <div>
+        <a href="./gloria.html">Gloria</a>
+        <a href="./profile.html" alt="ayenyeinsanProfile">Aye Nyein San</a>
+        <img src="./img.jpg" alt="gloria&rubi" width="300" height="400">
+        <img src="camtlogo.png" alt="CAMT logo" width="300" height="300">CAMT
+    </div>
+   
 </body>
 </html>
