update Ruth's info

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <a href="./profile.html" alt="ayenyeinsanProfile">Aye Nyein San</a>
         <img src="./img.jpg" alt="gloria&rubi" width="300" height="400">
         <img src="camtlogo.png" alt="CAMT logo" width="300" height="300">CAMT
+        <a href="./ruth.html">Ruth</a>
     </div>
    
 
